--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,8 @@ permissions:
 
 env:
   REGION: us-east-1
-  BACKEND_STACK_NAME: "backend"
-  FRONTEND_STACK_NAME: "frontend"
+  BACKEND_STACK_NAME: "backend-elijah"
+  FRONTEND_STACK_NAME: "frontend-elijah"
 
 jobs:
   deploy-backend:
